@@ -59,7 +59,7 @@ public class AdminResetFlagsCommand extends ConfirmableCommand {
 
     @Override
     public Optional<List<String>> tabComplete(User user, String alias, List<String> args) {
-        String lastArg = !args.isEmpty() ? args.get(args.size()-1) : "";
+        String lastArg = !args.isEmpty() ? args.getLast() : "";
         return Optional.of(Util.tabLimit(options, lastArg));
     }
 }
