@@ -202,12 +202,8 @@ public class AdminSettingsCommand extends CompositeCommand {
             // Command line setting
             flag.ifPresent(f -> {
                 switch (f.getType()) {
-                case PROTECTION -> {
-                    island.setFlag(f, rank);
-                }
-                case SETTING -> {
-                    island.setSettingsFlag(f, activeState);
-                }
+                case PROTECTION -> island.setFlag(f, rank);
+                case SETTING -> island.setSettingsFlag(f, activeState);
                 case WORLD_SETTING -> f.setSetting(getWorld(), activeState);
                 default -> {
                     // Do nothing
@@ -252,7 +248,7 @@ public class AdminSettingsCommand extends CompositeCommand {
         String active = Util.stripColor(user.getTranslation("protection.panel.flag-item.setting-active"));
         String disabled = Util.stripColor(user.getTranslation("protection.panel.flag-item.setting-disabled"));
         List<String> options = new ArrayList<>();
-        String lastArg = !args.isEmpty() ? args.get(args.size()-1) : "";
+        String lastArg = !args.isEmpty() ? args.getLast() : "";
         if (args.size() == 2) {
             // Player names or world settings
             options = Util.tabLimit(Util.getOnlinePlayerList(user), lastArg);
