@@ -54,7 +54,7 @@ public class IslandLanguageCommand extends CompositeCommand {
     @Override
     public Optional<List<String>> tabComplete(User user, String alias, List<String> args) {
         List<String> options = new ArrayList<>();
-        String lastArg = !args.isEmpty() ? args.get(args.size()-1) : "";
+        String lastArg = !args.isEmpty() ? args.getLast() : "";
         for (Locale locale : getPlugin().getLocalesManager().getAvailableLocales(true)) {
             options.add(locale.toLanguageTag());
         }
